# tiny-terminal

./: .gitignore  .tiny-terminal.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE_v0.1.0.md  RELEASING.md  tiny-terminal-v0.1.0-linux-x86_64.tar.gz.sha256
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/concept/: view.md
docs/plans/: IMPLEMENTATION_PLAN.md  spec.md
examples/project-config/: .tiny-terminal.toml
src/: config.rs  main.rs
src/effects/: matrix.rs  mod.rs
tests/: config_integration_tests.rs
