[package]
name = "tiny-terminal"
version = "2025.11.0"
edition = "2021"
description = "Tiny, customizable terminal with a Matrix rain default effect"
license = "MIT OR Apache-2.0"
authors = ["Trevor Bowman <you@example.com>"]
repository = "https://github.com/tbowman01/tiny-terminal"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
directories = "5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[features]
# Default to the Matrix effect. You can add new effects as gated features later.
default = ["effect-matrix"]

effect-matrix = []
